grammar.js
    source_file: ($) => repeat($.statement),

    statement: ($) =>
      seq(
        choice(
          $.definition_statement,
          $.query_statement,
          $.mutation_statement,
          $.transaction_statement,
          $.import_statement,
          $.introspection_statement,
          $.prepare_statement,
          $.execute_statement,
        ),
        ";",
      ),

    // --- Definitions (SDL) ---
    definition_statement: ($) =>
      choice(
        seq(repeat(choice("DEFINE", "ABSTRACT")), $.definition_body),
        $.mixed_definition_batch,
      ),

    namespace_definition: ($) => seq("NAMESPACE", $.namespace_body),
    node_definition: ($) => seq("NODE", choice($.node_entry_full, $.node_batch)),
    role_constraint_block: ($) => seq("{", commaSep($.expression), "}"),

    node_body: ($) => seq("{", commaSep($.node_entry), "}"),
    node_entry: ($) => choice($.node_storage_entry, $.node_computed_entry),

    mutation_statement: ($) =>
      choice(
        seq("CREATE", $.create_body),
        $.mixed_create_batch,
        $.merge_statement,
        $.set_statement,
        $.delete_statement,
        $.alter_statement,
        $.drop_statement,
        $.migrate_statement,
        seq("GRANT", "ACCESS", "ROLE", $.identifier, "TO", $.identifier),
        seq("REVOKE", "ACCESS", "ROLE", $.identifier, "FROM", $.identifier),
        seq("ADD", "ROLE", choice($.role_entry, seq("[", commaSep1($.role_entry), "]"))),
      ),

    alter_role_entry: ($) => seq($.identifier, $.alter_role_ops),

    alter_role_ops: ($) =>
      choice(
        $.alter_role_op, // Level 1: single op
        seq("[", commaSep($.alter_role_op), "]"), // Level 2: batch ops
      ),

    alter_role_op: ($) =>
      choice(
        seq("ADD", "ALLOWS", $.identifier, optional($.role_constraint_block)),
        seq("DROP", "ALLOWS", $.identifier),
        seq(
          "ADD",
          "CONSTRAINT",
          optional(seq($.identifier, ":")),
          $.expression,
        ),
        seq("DROP", "CONSTRAINT", $.identifier),
      ),

    alter_statement: ($) =>
      seq(
        "ALTER",
        choice(
          // NODE — levels 1 & 2
          seq(
            "NODE",
            choice(
              seq($.identifier, $.alter_ops),
              seq("[", commaSep1(seq($.identifier, $.alter_ops)), "]"),
            ),
          ),
          // EDGE — levels 1 & 2
          seq(
            "EDGE",
            choice(
              seq($.identifier, $.alter_ops),
              seq("[", commaSep1(seq($.identifier, $.alter_ops)), "]"),
            ),
          ),
          // FIELD — levels 1 & 2
          seq(
            "FIELD",
            choice(
              $.alter_field_entry,
              seq("[", commaSep1($.alter_field_entry), "]"),
            ),
          ),
          // ROLE — levels 1 & 2
          seq(
            "ROLE",
            choice(
              $.alter_role_entry,
              seq("[", commaSep1($.alter_role_entry), "]"),
            ),
          ),
          // Level 4 bulk mixed
          $.bulk_alter_block,
          // Non-type-hierarchy forms
          seq("SCHEMA", $.identifier, "[", repeat($.alter_schema_entry), "]"),
          seq(
            "USER",
            $.identifier,
            choice(
              seq("SET", "PASSWORD", $.string),
              seq("ADD", "ROLES", "[", commaSep($.identifier), "]"),
              seq("REMOVE", "ROLES", "[", commaSep($.identifier), "]"),
            ),
          ),
          seq(
            "NAMESPACE",
            $.dotted_identifier,
            "SET",
            "STRICT_PERMISSIONS",
            choice("ON", "OFF"),
          ),
        ),
      ),

    alter_schema_entry: ($) =>
      seq(
        choice("ADD", "DROP", "RENAME"),
        $.identifier,
        optional(seq("TO", $.identifier)),
      ),

    expression: ($) =>
      choice(
        $.conditional_expression,
        $.binary_expression,
        $.unary_expression,
        $.primary_expression,
      ),

    binary_expression: ($) =>
      choice(
        ...[
          ["||", 20],
          ["&&", 30],
          ["==", 40],
          ["!=", 40],
          ["<", 50],
          [">", 50],
          ["<=", 50],
          [">=", 50],
          ["IN", 50],
          ["|", 55],
          ["&", 55],
          ["+", 60],
          ["-", 60],
          ["*", 70],
          ["/", 70],
          ["%", 70],
          ["??", 75],
          ["LIKE", 50],
          ["ILIKE", 50],
          ["MATCHES", 50],
          ["IMATCHES", 50],
        ].map(([operator, precedence]) =>
          prec.left(precedence, seq($.expression, operator, $.expression)),
        ),
      ),

    primary_expression: ($) =>
      choice(
        $.literal,
        $.identifier,
        $.member_access,
        $.index_access,
        $.list_literal,
        $.window_call,
        $.function_call,
        $.subquery_expression,
        $.parameter_ref,
        $.enum_shorthand,
        seq("(", $.expression, ")"),
      ),

    enum_shorthand: ($) => seq(".", $.identifier),

    // --- Scripting / Blocks ---
    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    dotted_identifier: ($) => seq($.identifier, repeat(seq(".", $.identifier))),

    type: ($) =>
      seq(
        $.dotted_identifier,
        optional(seq("<", commaSep1($.type), ">")),
        optional("?"),
      ),

    decorator: ($) =>
      seq(
        /@[a-zA-Z_][a-zA-Z0-9_]*/,
        optional(seq("(", commaSep($.expression), ")")),
      ),

    literal: ($) => choice($.string, $.number, $.boolean, "null"),

    string: ($) => /"([^"\\]|\\.)*"/,
    number: ($) => /-?\d+(\.\d+)?d?/,
    boolean: ($) => choice("true", "false"),
