test/corpus/alter_role_tests.txt
==================
Alter Role Add Allows Level 1
==================
ALTER ROLE driver ADD ALLOWS Truck;
---

(source_file
  (statement
    (mutation_statement
      (alter_statement
        (alter_role_entry
          (identifier)
          (alter_role_ops
            (alter_role_op
              (identifier))))))))

==================
Alter Role Add Allows With Constraint Level 1
==================
ALTER ROLE driver ADD ALLOWS Truck { .licensed_commercial == true };
---

(source_file
  (statement
    (mutation_statement
      (alter_statement
        (alter_role_entry
          (identifier)
          (alter_role_ops
            (alter_role_op
              (identifier)
              (role_constraint_block
                (expression
                  (binary_expression
                    (expression
                      (primary_expression
                        (enum_shorthand
                          (identifier))))
                    (expression
                      (primary_expression
                        (literal
                          (boolean))))))))))))))

==================
Alter Role Drop Allows Level 1
==================
ALTER ROLE driver DROP ALLOWS AI;
---

(source_file
  (statement
    (mutation_statement
      (alter_statement
        (alter_role_entry
          (identifier)
          (alter_role_ops
            (alter_role_op
              (identifier))))))))

==================
Alter Role Add Constraint Level 1
==================
ALTER ROLE driver ADD CONSTRAINT .age >= 18;
---

(source_file
  (statement
    (mutation_statement
      (alter_statement
        (alter_role_entry
          (identifier)
          (alter_role_ops
            (alter_role_op
              (expression
                (binary_expression
                  (expression
                    (primary_expression
                      (enum_shorthand
                        (identifier))))
                  (expression
                    (primary_expression
                      (literal
                        (number)))))))))))))

==================
Alter Role Add Named Constraint Level 1
==================
ALTER ROLE driver ADD CONSTRAINT min_age: .age >= 18;
---

(source_file
  (statement
    (mutation_statement
      (alter_statement
        (alter_role_entry
          (identifier)
          (alter_role_ops
            (alter_role_op
              (identifier)
              (expression
                (binary_expression
                  (expression
                    (primary_expression
                      (enum_shorthand
                        (identifier))))
                  (expression
                    (primary_expression
                      (literal
                        (number)))))))))))))

==================
Alter Role Drop Constraint Level 1
==================
ALTER ROLE driver DROP CONSTRAINT min_age;
---

(source_file
  (statement
    (mutation_statement
      (alter_statement
        (alter_role_entry
          (identifier)
          (alter_role_ops
            (alter_role_op
              (identifier))))))))

==================
Alter Role Batch Ops Level 2
==================
ALTER ROLE driver [
    ADD ALLOWS Truck { .licensed_commercial == true },
    DROP ALLOWS AI,
    ADD CONSTRAINT min_age: .age >= 18
];
---

(source_file
  (statement
    (mutation_statement
      (alter_statement
        (alter_role_entry
          (identifier)
          (alter_role_ops
            (alter_role_op
              (identifier)
              (role_constraint_block
                (expression
                  (binary_expression
                    (expression
                      (primary_expression
                        (enum_shorthand
                          (identifier))))
                    (expression
                      (primary_expression
                        (literal
                          (boolean))))))))
            (alter_role_op
              (identifier))
            (alter_role_op
              (identifier)
              (expression
                (binary_expression
                  (expression
                    (primary_expression
                      (enum_shorthand
                        (identifier))))
                  (expression
                    (primary_expression
                      (literal
                        (number)))))))))))))

==================
Alter Role Multiple Roles Level 3
==================
ALTER ROLE [
    driver [ADD ALLOWS Truck, DROP ALLOWS AI],
    passenger ADD ALLOWS Robot
];
---

(source_file
  (statement
    (mutation_statement
      (alter_statement
        (alter_role_entry
          (identifier)
          (alter_role_ops
            (alter_role_op
              (identifier))
            (alter_role_op
              (identifier))))
        (alter_role_entry
          (identifier)
          (alter_role_ops
            (alter_role_op
              (identifier))))))))
