test/corpus/basic.txt
==================
Basic Definitions
==================
DEFINE NAMESPACE MySystem;
DEFINE NODE Person {
  name: String @required,
  age: Int
};
---
(source_file
  (statement
    (definition_statement
      (namespace_definition
        (identifier))))
  (statement
    (definition_statement
      (node_definition
        (identifier)
        (node_body
          (node_entry
            (identifier)
            (type
              (identifier))
            (decorator))
          (node_entry
            (identifier)
            (type
              (identifier))))))))
